--- a/css/main.css
+++ b/css/main.css
@@ -97,11 +97,115 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+.top_con{
+background: url('../img/top-bg.png') center no-repeat #141414;
+border-bottom: 4px solid #bfbfbf;
+max-height: 423px;
+}
 
 
+.head_con{
+    width:100%;
+
+    height: 160px;
+    /*background: red;*/
+    margin: 0 auto;
+}
+.logo_act{
+max-width:960px;
+height:158px;
+margin:0 auto;
+background:url('../img/logo-bg.png')center center no-repeat;
+}
+.border_act{
+max-width:960px;
+height:2px;
+background:black;
+margin:0 auto;
+-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+  box-sizing: border-box; 
+  border-bottom:1px solid #222223;
+}
+.bod_con{
+    width: 100%; height: 235px;  
+    /*background: blue;*/  margin: 0 auto;
+margin-bottom:23px;
+}
+.content_act{
+max-width:692px;
+margin:0 auto;
+text-align:center;
+color:white;
+
+}
+
+.content_act h1{
+font-family: 'Exo', sans-serif;
+}
+
+.content_act p{
+font-family: 'Lato', sans-serif;
+font-size: 1.1em;
+}
+.menu_act{
+margin-top: 2.7%;
+height: 66px;
+}
+
+.menu_act ul{
+
+heighT: 100%;
+max-width: 494px;
+margin: 0 auto;
+padding: 0;
+list-style: none;
+}
 
 
+.menu_act li{
+height: 45px;
+width: 25%;
+float: left;
 
+}
+.link{
+background:url('../img/link-bg.png')center no-repeat;
+}
+.beh{
+background:url('../img/beh-bg.png')center no-repeat;
+}
+.ghub{
+background:url('../img/ghub-bg.png')center no-repeat;
+}
+.twitt{
+background:url('../img/twitt-bg.png')center no-repeat;
+}
+.menu_act li a{
+height: 100%;
+width: 100%;
+display:block
+
+}
+
+
+.foot_con{
+    width: 100%;  height: 164px;  
+    /*background: green;*/  margin: 0 auto;
+
+}
+
+.cright_act {
+margin-top:2%;
+
+}
+.cright_act p{
+width: 200px;
+margin: 0 auto;
+font-family: 'Lato', sans-serif;
+font-size: .8em;
+color:#141414;
+}
 
 
 
